GEMConf page is almost finished

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -11,8 +11,10 @@ $maxWidth: 1400px;
 
 @import '_type';
 @import '_header';
+@import '_buttons';
 
 @import 'components/_hero-image';
 @import 'components/_box-content';
 @import 'components/_box-callout';
+@import 'components/_gem-topics';
 
