--- a/app/templates/components/box-content.hbs
+++ b/app/templates/components/box-content.hbs
@@ -4,8 +4,10 @@
       <img src={{image}}>
     </box>
   {{/if}}
-  <box class="box-content--content" md=10 sm=8 xs=12>
-    {{yield}}
-  </box>
+  {{#if image}}
+    <box class="box-content--content" md=10 sm=8 xs=12>{{yield}}</box>
+  {{else}}
+    <box class="box-content--content">{{yield}}</box>
+  {{/if}}
 </grid>
 
