--- a/app/templates/components/hero-image.hbs
+++ b/app/templates/components/hero-image.hbs
@@ -1,3 +1,3 @@
 {{#if hero}}
-  <img class="hero-image--img" src={{hero.url}} title={{hero.title}}>
+  <img class="hero-image--img" src={{hero}} title={{hero.title}}>
 {{/if}}
