Added GEM Cards

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -15,3 +15,4 @@ $maxWidth: 1400px;
 @import 'components/_gem-agenda';
 @import 'components/_gem-sponsor-links';
 @import 'components/_gem-footer';
+@import 'components/_gem-cards';
