--- a/app/templates/components/gem-footer.hbs
+++ b/app/templates/components/gem-footer.hbs
@@ -10,8 +10,8 @@
   </ul>
   <ul>
     <li><h3>Contribute</h3></li>
-    <li><a href="/speak">Speak</a></li>
-    <li><a href="/sponsor">Sponsor</a></li>
+    <li><a href="/speak">Give a talk</a></li>
+    <li><a href="/sponsorship">Sponsorship</a></li>
   </ul>
   <ul>
     <li><h3>Follow Us</h3></li>
