--- a/app/styles/components/_box-callout.scss
+++ b/app/styles/components/_box-callout.scss
@@ -20,13 +20,17 @@
     }
   }
   
-  &.is-blue {
+  &.is-sky {
     background: url(images/blue-background.svg) no-repeat center top $skyBlue;
     padding-bottom: 30px;
     
     grid {
-      max-width: 700px;
+      max-width: 600px;
     }
+  }
+  
+  &.is-sky-blue {
+    background-color: $skyBlue;
   }
   
   .box-callout--img-left, .box-callout--img-right {
