--- a/app/templates/components/gem-footer.hbs
+++ b/app/templates/components/gem-footer.hbs
@@ -3,15 +3,15 @@
 </div>
 <div class="footer-links">
   <ul>
-    <li><h3>Content</h3></li>
-    <li><a href="/videos">Videos</a></li>
-    <li><a href="/episodes">Episodes</a></li>
-    <li><a href="/conferences">Conferences</a></li>
+    <li><h3>For you</h3></li>
+    <li>{{link-to 'Videos' 'videos'}}</li>
+    <li>{{link-to 'Episodes' 'episodes'}}</li>
+    <li>{{link-to 'Conferences' 'conferences'}}</li>
   </ul>
   <ul>
     <li><h3>Contribute</h3></li>
-    <li><a href="/speak">Give a talk</a></li>
-    <li><a href="/sponsorship">Sponsorship</a></li>
+    <li>{{link-to 'Give a talk' 'pages' 'speak'}}</li>
+    <li>{{link-to 'Become a sponsor' 'pages' 'sponsorship'}}</li>
   </ul>
   <ul>
     <li><h3>Follow Us</h3></li>
