--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,8 @@
 <screen>
   <container>
+    <page>
     {{outlet}}
-    {{gem-footer}}
+    </page>
+    {{sustain 'gem-footer'}}
   </container>
 </screen>
