--- a/app/templates/pages.hbs
+++ b/app/templates/pages.hbs
@@ -1,1 +1,12 @@
-{{outlet}}
+{{sustain 'nav-header'}}
+<grid class="gem-article">
+  <box m=10 xs=12>
+    <article>
+      <h1>{{model.title}}</h1>
+
+      {{model.content}}
+    </article>
+  </box>
+  <box m=2 xs=12>
+  </box>
+</grid>
