--- a/app/styles/components/_box-callout.scss
+++ b/app/styles/components/_box-callout.scss
@@ -1,4 +1,5 @@
 .box-callout {
+  @include outer-container(100%);
   padding: 0 30px;
 
   grid {
@@ -41,4 +42,12 @@
     }
   }
   
+}
+
+.box-callout--content {
+  @include span-columns(9);
+}
+
+.box-callout--img-right {
+  @include span-columns(3);
 }
