--- a/app/styles/components/_box-content.scss
+++ b/app/styles/components/_box-content.scss
@@ -1,4 +1,5 @@
 .box-content {
+  @include outer-container(100%);
   max-width: $maxWidth;
   margin: 0 auto;
 
@@ -9,3 +10,10 @@
   }
 }
 
+.box-content--img {
+  @include span-columns(3);
+}
+
+.box-content--content {
+  @include span-columns(9);
+}
