--- a/app/templates/components/box-callout.hbs
+++ b/app/templates/components/box-callout.hbs
@@ -1,4 +1,4 @@
-<grid responsive>
+<div class="box-callout">
   {{#if (and image (eq position 'left'))}}
     <box class="box-callout--img-left" md=2 sm=4 xs=12>
       <img src={{image}}>
@@ -14,4 +14,4 @@
       <img src={{image}}>
     </box>
   {{/if}}  
-</grid>
+</div>
