--- a/app/styles/_grid-settings.scss
+++ b/app/styles/_grid-settings.scss
@@ -1,5 +1,6 @@
-@import "neat/neat-helpers"; // or "neat-helpers" when in Rails
+// @import "neat/neat-helpers"; // or "neat-helpers" when in Rails
 
 // Define your breakpoints
-$tablet: new-breakpoint(max-width 768px 8);
-$mobile: new-breakpoint(max-width 480px 4);
+$desktop: new-breakpoint(min-width 1400px);
+$tablet: new-breakpoint(min-width 768px);
+$mobile: new-breakpoint(max-width 480px);
