--- a/app/templates/videos.hbs
+++ b/app/templates/videos.hbs
@@ -1,1 +1,8 @@
-{{outlet}}
+{{nav-header}}
+{{#each model as |video|}}
+  <div class="video-card">
+    {{responsive-image image=video.featured}}
+    <h2 class="video-card--title">{{video.title}}</h2>
+    <div class="video-card--excerpt">{{video.excerpt}}</div>
+  </div>
+{{/each}}
