Added videos page (needs pagination)

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -9,6 +9,7 @@ $maxWidth: 1400px;
 @import '_buttons';
 
 @import 'pages/_conference';
+@import 'pages/_videos';
 
 @import 'components/_nav-header';
 @import 'components/_hero-image';
