--- a/app/templates/video.hbs
+++ b/app/templates/video.hbs
@@ -1,1 +1,9 @@
-{{outlet}}
+{{nav-header}}
+
+<article class="video-page">
+  {{responsive-vimeo-video video=model.vimeo}}
+  
+  
+</article>
+
+{{gem-footer}}
