--- a/app/templates/components/gem-topics.hbs
+++ b/app/templates/components/gem-topics.hbs
@@ -1,12 +1,13 @@
+{{#if hasBlock}}
+  {{yield}}
+{{else}}
   {{#each topics as |topic|}}
-    <div class="gem-topics--topic">
-      <div class="gem-topics--image">
-        <img src={{topic.presenter.avatar}}>
-      </div>
-      <div class="gem-topics--content">
-        <h1>{{topic.title}}</h1>
-        {{{if topic.excerpt topic.excerpt}}}
-        <p class="gem-topics--detail">by {{topic.presenter.title}}</p>
-      </div>
-    </div>
+    {{gem-topics-topic
+      image=topic.presenter.avatar
+      title=topic.presenter.title
+      description=topic.excerpt
+      by-line=topic.presenter.title
+    }}  
   {{/each}}
+{{/if}}
+  
