--- a/app/templates/components/gem-topics-topic.hbs
+++ b/app/templates/components/gem-topics-topic.hbs
@@ -2,19 +2,23 @@
   <img src={{image}}>
 </div>
 <div class="gem-topics--content">
-  <h1>{{title}}</h1>
-  {{#if descriptioin}}
+  <h2 class="gem-topics--title">{{title}}</h2>
+  {{#if description}}
     <div class="gem-topics--description">
-      {{description}}
+      {{{description}}}
     </div>
   {{/if}}
+  {{#if by-line}}
   <p class="gem-topics--detail">
     {{#if by-line}}<span class="gem-topics--by-line"> by {{by-line}}</span>{{/if}}
+  </p>
+  {{/if}}
+  <div class="gem-topics--links">
     {{#if twitter}}
       <a href={{concat 'https://twitter.com/' twitter}}>{{fa-icon 'twitter'}}</a>
     {{/if}}
     {{#if linkedin}}
       <a href={{linkedin}}>{{fa-icon 'linkedin'}}</a>
     {{/if}}
-  </p>
+  </div>
 </div>
