--- a/app/templates/video.hbs
+++ b/app/templates/video.hbs
@@ -5,17 +5,21 @@
     {{responsive-vimeo-video video=model.vimeo}}
   </main>
   <aside>
-    {{#gem-topics}}
-      {{gem-topics-topic 
-        image=model.presenter.featured.media-details.sizes.thumbnail.source-url
+    {{#gem-topics is-aside=true}}
+      {{gem-topics-topic
+        image=model.presenter.featured.thumbnail.url
         title=model.presenter.title
         description=model.presenter.excerpt
         twitter=model.presenter.twitter
         linkedin=model.presenter.linkedin
       }}
     {{/gem-topics}}
-    <h1>{{model.title}} <span class="tag">{{if (contains 'Code Talks' (map-by 'name' model.category)) 'code-talk'}}</span></h1>
-
+    <h1 class="video-page--title">{{model.title}}</h1>
+    <div class="video-page--badges">
+      {{#each (append model.categories model.tags) as |badge|}}
+        {{#link-to 'videos' (query-params type=badge.type slug=badge.slug)}}{{badge.name}}{{/link-to}}
+      {{/each}}
+    </div>
   </aside>
   <section>
     
