--- a/app/styles/pages/_video.scss
+++ b/app/styles/pages/_video.scss
@@ -23,6 +23,26 @@
   
   &--title {
     font-size: 32px;
-    margin: 0;    
+  }
+  
+  &--section-title {
+    font-size: 24px;
+  }
+  
+  &--badges {
+    border-bottom: $base-separator;
+    padding-bottom: $base-spacing;
+  
+    a {
+      display: inline-block;
+          
+      padding: 5px;
+      text-transform: uppercase;
+      font-size: 18px;
+      text-decoration: none;
+      background: $blue;
+      color: white;
+      border-radius: 3px;
+    }
   }
 }
