--- a/app/templates/video.hbs
+++ b/app/templates/video.hbs
@@ -15,11 +15,25 @@
       }}
     {{/gem-topics}}
     <h1 class="video-page--title">{{model.title}}</h1>
+    <div class="video-page--description">
+      {{{model.excerpt}}}
+    </div>
     <div class="video-page--badges">
       {{#each (append model.categories model.tags) as |badge|}}
         {{#link-to 'videos' (query-params type=badge.type slug=badge.slug)}}{{badge.name}}{{/link-to}}
       {{/each}}
     </div>
+    {{#if model.related}}
+      <div class="video-page--related">
+        <h3 class="video-page--section-title">Related Videos</h3>
+        {{#each model.related as |video|}}
+          {{video-card model=video size='medium'}}
+        {{/each}}
+      </div>
+    {{/if}}
+
+
+
   </aside>
   <section>
     
