--- a/app/templates/videos.hbs
+++ b/app/templates/videos.hbs
@@ -2,16 +2,6 @@
 
 <section class="videos-page">
 {{#each model as |video|}}
-  <div class="video-card">
-    {{#link-to 'video' video.slug}}
-      <img class="video-card--image" src={{video.featured.media-details.sizes.large.source-url}}>
-    {{/link-to}}
-    <h3 class="video-card--title">
-      {{#link-to 'video' video.slug}}
-        {{video.title}} by {{video.presenter.title}}
-      {{/link-to}}
-    </h3>
-    <div class="video-card--excerpt">{{video.excerpt}}</div>
-  </div>
+  {{video-card model=video size='large'}}
 {{/each}}
 </section>
