--- a/app/templates/videos.hbs
+++ b/app/templates/videos.hbs
@@ -4,4 +4,6 @@
 {{#each model as |video|}}
   {{video-card model=video size='large'}}
 {{/each}}
+
+{{gem-pagination page=model.meta.page total-pages=model.meta.total-pages}}
 </section>
