Added category searching

--- a/app/templates/components/nav-header.hbs
+++ b/app/templates/components/nav-header.hbs
@@ -2,5 +2,5 @@
 {{link-to 'Home' 'index' classNames="go-home"}}
 {{link-to 'Conferences' 'conferences'}}
 {{link-to 'Episodes' 'episodes'}}
-{{link-to 'Videos' 'videos'}}
+{{link-to 'Videos' 'videos' (query-params page=1)}}
 </nav>
