video page css initial

--- a/app/styles/_colors.scss
+++ b/app/styles/_colors.scss
@@ -4,6 +4,7 @@ $darkerBlue: #40AFB2;
 $navyBlue: #1D1737;
 $skyBlue: #DCF5FF;
 $dark-gray: #333;
+$light-gray: #f1f1f3;
 $base-font-color: $dark-gray;
 
 .red {
