--- a/app/templates/video.hbs
+++ b/app/templates/video.hbs
@@ -3,28 +3,15 @@
 <article class="video-page">
   <main>
     {{responsive-vimeo-video video=model.vimeo}}
-    
+    {{#if (or media.isMobile media.isTablet)}}
+      {{gem-video-details model=model}}
+    {{/if}}
     {{disqus-comments identifier=model.title}}
   </main>
   <aside>
-    {{#gem-topics is-aside=true}}
-      {{gem-topics-topic
-        image=model.presenter.featured.thumbnail.url
-        title=model.presenter.title
-        description=model.presenter.excerpt
-        twitter=model.presenter.twitter
-        linkedin=model.presenter.linkedin
-      }}
-    {{/gem-topics}}
-    <h1 class="video-page--title">{{model.title}}</h1>
-    <div class="video-page--description">
-      {{{model.excerpt}}}
-    </div>
-    <div class="video-page--badges">
-      {{#each (append model.categories model.tags) as |badge|}}
-        {{#link-to 'videos' (query-params type=badge.type slug=badge.slug)}}{{badge.name}}{{/link-to}}
-      {{/each}}
-    </div>
+    {{#if (or media.isJumbo media.isDesktop)}}
+      {{gem-video-details model=model}}
+    {{/if}}
     {{#if model.related}}
       <div class="video-page--related">
         <h3 class="video-page--section-title">Related Videos</h3>
@@ -38,5 +25,3 @@
     
   </section>
 </article>
-  
-{{gem-footer}}
