adding margin-bottom to video container.

--- a/app/styles/components/_responsive-vimeo-video.scss
+++ b/app/styles/components/_responsive-vimeo-video.scss
@@ -3,7 +3,8 @@
   padding-bottom: 56.25%; 
   height: 0; 
   overflow: hidden; 
-  max-width: 100%; 
+  max-width: 100%;
+  margin-bottom: 24px;
   
   iframe, object, embed {
     position: absolute; 
