--- a/app/styles/components/_gem-pagination.scss
+++ b/app/styles/components/_gem-pagination.scss
@@ -1,7 +1,7 @@
 .gem-pagination {
   text-align: center;
   
-  a {
+  a, &--current {
     display: inline-block;
     padding: 10px 20px;
     border: $base-separator;
