--- a/app/templates/components/gem-video-details.hbs
+++ b/app/templates/components/gem-video-details.hbs
@@ -3,8 +3,11 @@
     {{{model.excerpt}}}
 </div>
 <div class="video-page--badges">
-    {{#each (append model.categories model.tags) as |badge|}}
-        {{#link-to 'videos' (query-params type=badge.type slug=badge.slug)}}{{badge.name}}{{/link-to}}
+    {{#each model.categories as |category|}}
+        {{#link-to 'videos' (query-params category=category.slug)}}{{category.name}}{{/link-to}}
+    {{/each}}
+    {{#each model.tags as |tag|}}
+        {{#link-to 'videos' (query-params tag=tag.slug)}}{{tag.name}}{{/link-to}}
     {{/each}}
 </div>
 {{#gem-topics is-aside=true}}
