--- a/app/templates/components/gem-topics.hbs
+++ b/app/templates/components/gem-topics.hbs
@@ -3,7 +3,7 @@
 {{else}}
   {{#each topics as |topic|}}
     {{gem-topics-topic
-      image=topic.presenter.avatar
+      image=topic.presenter.featured
       title=topic.presenter.title
       description=topic.excerpt
       by-line=topic.presenter.title
