--- a/app/templates/episodes.hbs
+++ b/app/templates/episodes.hbs
@@ -1,5 +1,39 @@
-<ul>
-{{#each model as |episode|}}
-  <li>{{#link-to 'episode' episode.slug}}{{episode.title}}{{/link-to}}</li>
-{{/each}}
-</ul>
+{{nav-header}}
+
+<div class="episodes-page">
+  <h1 class="episodes-page--title">Season {{season}}</h1>
+  
+  {{#each model as |episode|}}
+    <section class="episodes-page--strip" id="episode-{{episode.number}}">
+      <div class="episodes-pages--frame episode-title-frame">
+          <h4 class="frame-title">Episode {{episode.number}}</h4>
+          <h2 class="episode-title">{{#link-to 'episode' episode.slug}}{{episode.title}}{{/link-to}}</h2>
+          <div class="episode-date"><strong>{{moment-format episode.eventDate 'MMMM DD, YYYY'}}</strong> at {{moment-format episode.eventDate 'h:mm a'}}</div>
+      </div>
+      <div class="episodes-pages--frame episode-topics-frame">
+        <h4 class="frame-title">Topics</h4>
+        <ul class="frame-rows">
+          {{#each episode.presentationTopics as |topic|}}
+            <li class="frame-row">
+              <h4 class="row-title">{{topic.title}}</h4>
+              {{{topic.excerpt}}}
+            </li>
+          {{/each}}
+        </ul>
+      </div>
+      <div class="episodes-pages--frame episode-guests-frame">
+        <h4 class="frame-title">Guests</h4>
+        <ul class="frame-rows">
+          {{#each episode.presentationTopics as |topic|}}
+            <li class="frame-row">
+              <img class="row-thumbnail" src={{topic.presenter.featured.thumbnail.url}} alt={{topic.presenter.title}}>
+              <h4 class="row-title">{{topic.presenter.title}}</h4>
+              {{{topic.presenter.excerpt}}}
+            </li>
+          {{/each}}
+        </ul>
+      </div>
+    </section>
+  {{/each}}
+  
+</div>
