Added BigMarker button and fixed date in safari

--- a/app/styles/_colors.scss
+++ b/app/styles/_colors.scss
@@ -5,6 +5,9 @@ $navyBlue: #1D1737;
 $skyBlue: #DCF5FF;
 $dark-gray: #333;
 $light-gray: #f1f1f3;
+$dark-green: #16A24D;
+$light-green: #50EF8E;
+
 $base-font-color: $dark-gray;
 
 .red {
