Made collapsible top menu

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,2 +1,9 @@
-{{outlet}}
+{{#nav-header}}
+  {{link-to 'Conferences' 'conferences'}}
+  {{link-to 'Episodes' 'episodes'}}
+  {{link-to 'Videos' 'videos' (query-params page=1 category=null tag=null)}}
+{{/nav-header}}
+
+{{liquid-outlet}}
+
 {{gem-footer}}
