--- a/app/styles/components/_nav-header.scss
+++ b/app/styles/components/_nav-header.scss
@@ -1,27 +1,63 @@
 header {
   background: $skyBlue;
-  padding-left: 20px;
+  padding: 0 20px;
   
   nav {
-    max-width: $maxWidth;
-    
+    @include clearfix;
     padding-bottom: 5px; 
   }
-  
-  a {
-    display: inline-block;
-    padding: 40px 20px;
-    
+
+  a, .toggle-menu {
     color: $darkerBlue;
     text-transform: uppercase;
     text-decoration: none;
   }
 
-  a.go-home {
-    text-indent: -2000px;
-    width: 80px;
+  .toggle-menu {
+    display: inline-block;
+    margin-top: 30px;
+    padding-bottom: 10px;
     
+    background: none;
+    border: none;
+  }
+
+  .go-home {
+    display: block;
+    float: left;
+    width: 70px;
+    height: 100px;
+    padding: 40px 20px;
+    
+    text-indent: -2000px;
     background: url(images/gem-flag.svg) center top no-repeat;
+  }
+
+  @include media($mobile) {
+    text-align: right;
+
+    a {
+      display: block;
+      padding: 10px 0;
+    }
+  }
+  
+  @include media($tablet) {
+    text-align: right;
+
+    a {
+      display: block;
+      padding: 10px 0;
+    }
+  }
+    
+  @include media($desktop) {
+    text-align: left;
+
+    a {
+      display: inline-block;
+      padding: 40px 20px;
+    }
   }
   
 }
