--- a/app/templates/components/nav-header.hbs
+++ b/app/templates/components/nav-header.hbs
@@ -1,6 +1,11 @@
 <nav>
-{{link-to 'Home' 'index' classNames="go-home"}}
-{{link-to 'Conferences' 'conferences'}}
-{{link-to 'Episodes' 'episodes'}}
-{{link-to 'Videos' 'videos' (query-params page=1 category=null tag=null)}}
+  {{link-to '' 'index' classNames="go-home" title="Go home"}}
+  {{#if isCollapsible}}
+    <button {{action (action (toggle "isCollapsed" this))}} class="toggle-menu">Menu</button>
+    {{#liquid-if isCollapsed}}
+      {{yield}}
+    {{/liquid-if}}
+  {{else}}
+    {{yield}}
+  {{/if}}
 </nav>
