--- a/app/templates/components/gem-pagination.hbs
+++ b/app/templates/components/gem-pagination.hbs
@@ -1,7 +1,9 @@
-{{#if hasPrevious}}
-  {{#link-to (query-params page=previous) title="Go to previous page"}}&larr;{{/link-to}}
-{{/if}}
-<span class="gem-pagination--current">{{page}}</span>
-{{#if hasNext}}
-  {{#link-to (query-params page=next) title="Go to next page"}}&rarr;{{/link-to}}
+{{#if (gt total-pages 0)}}
+  {{#if hasPrevious}}
+    {{#link-to (query-params page=previous) title="Go to previous page"}}&larr;{{/link-to}}
+  {{/if}}
+  <span class="gem-pagination--current">{{page}}</span>
+  {{#if hasNext}}
+    {{#link-to (query-params page=next) title="Go to next page"}}&rarr;{{/link-to}}
+  {{/if}}
 {{/if}}
