--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,4 +1,4 @@
-{{#nav-header}}
+{{#nav-header title="Menu"}}
   {{link-to 'Conferences' 'conferences'}}
   {{link-to 'Episodes' 'episodes'}}
   {{link-to 'Videos' 'videos' (query-params page=1 category=null tag=null)}}
