--- a/app/templates/components/gem-footer.hbs
+++ b/app/templates/components/gem-footer.hbs
@@ -2,22 +2,7 @@
   <img src="/assets/images/gem-logo-inverted.png" alt="Global Ember Meetup Logo">
 </div>
 <div class="footer-links">
-  <ul>
-    <li><h3>For you</h3></li>
-    <li>{{link-to 'Videos' 'videos'}}</li>
-    <li>{{link-to 'Episodes' 'episodes'}}</li>
-    <li>{{link-to 'Conferences' 'conferences'}}</li>
-  </ul>
-  <ul>
-    <li><h3>Contribute</h3></li>
-    <li>{{link-to 'Give a talk' 'pages' 'speak'}}</li>
-    <li>{{link-to 'Become a sponsor' 'pages' 'sponsorship'}}</li>
-  </ul>
-  <ul>
-    <li><h3>Follow Us</h3></li>
-    <li><a href="https://twitter.com/embermeetup">Twitter</a></li>
-    <li><a href="https://vimeo.com/globalembermeetup">Vimeo</a></li>
-  </ul>
+  {{yield}}
 </div>
 
 <hr>
