added target=_blank the presenters social links

--- a/app/templates/components/gem-topics-topic.hbs
+++ b/app/templates/components/gem-topics-topic.hbs
@@ -15,10 +15,10 @@
   {{/if}}
   <div class="gem-topics--links">
     {{#if twitter}}
-      <a href={{concat 'https://twitter.com/' twitter}}>{{fa-icon 'twitter'}}</a>
+      <a href={{concat 'https://twitter.com/' twitter}} target="_blank">{{fa-icon 'twitter'}}</a>
     {{/if}}
     {{#if linkedin}}
-      <a href={{linkedin}}>{{fa-icon 'linkedin'}}</a>
+      <a href={{linkedin}} target="_blank">{{fa-icon 'linkedin'}}</a>
     {{/if}}
   </div>
 </div>
